2005-03-24 Alain Magloire
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIMemoryBlock.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIMemoryBlockManagement.java
	* src/org/eclipse/cdt/debug/internal/core/model/CMemoryBlockExtension.java

2005-03-23 Alain Magloire
	Change is the ICDIMemoryBlock&& ICDIMemoryManagement API
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIMemoryBlock.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIMemoryBlockManagement.java
	* src/org/eclipse/cdt/debug/internal/core/model/CMemoryBlockExtension.java

2005-03-21 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	* MappingSourceContainer.java: new
	* DisassemblyBlock.java
	* CSourceLookupDirector.java: new
	* CSourceLookupParticipant.java: new
	* CSourcePathComputerDelegate.java: new
	* MapEntrySourceContainer.java: new
	* MapEntrySourceContainerType.java: new
	* MappingSourceContainerType.java: new
	* plugin.properties
	* plugin.xml

2005-03-17 Mikhail Khodjaiants
	If casting of variable to a type or array causes an error, the status 
	of the variable is set to "error" and it can't be reset by subsequent castings.
	* CVariable.java

2005-02-24 Mikhail Khodjaiants
	Applied patch from Tracy Miranda (bug 86540: NPE in CProjectSourceLocation).
	Check for the project and synchronization are added to "initializeFolders".
	* CProjectSourceLocation.java

2005-02-22 Mikhail Khodjaiants
	Bug 84799: Implement Memory View and renderings with new rendering APIs.
	* CMemoryBlockExtensionRetrieval.java

2005-02-18 Mikhail Khodjaiants
	Remove.
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDIManager.java

2005-02-17 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Removed the core support of the Shared Libraries view.
	* ICSharedLibraryManager.java: removed
	* ICDebugTarget.java
	* ICSharedLibrary.java: removed
	* CSharedLibraryManager.java; removed
	* CDebugTarget.java
	* CSharedLibrary.java: removed
